--- a/PWA_Sample/index.html
+++ b/PWA_Sample/index.html
@@ -8,6 +8,13 @@
   </head>
 
 <body>
+	<form method="POST" action="pwa">
+	Family Name<br /><input name="nameFamily" type="text" value="" /><br />
+	First Name <br /><input name="nameFirst" type="text" value="" /><br />
+	Age        <br /><input name="age" type="text" value="21" /><br />
+	<input type="submit" value="登録" />
+	</form>
+
   <main>
     <h1>Hello PWA</h1>
     <select onchange="weather.onchange(this.options[this.selectedIndex].value)">
